Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Cached Image : A WPF control that wraps the Image control to enable file-system based caching" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Cached Image by floydpink</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Cached Image</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Cached Image</h1>
+        <p>A WPF control that wraps the Image control to enable file-system based caching.</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/floydpink/CachedImage">View on GitHub</a>
+        <p class="view"><a href="https://github.com/floydpink/CachedImage">View the Project on GitHub <small>floydpink/CachedImage</small></a></p>
 
-          <h1 id="project_title">Cached Image</h1>
-          <h2 id="project_tagline">A WPF control that wraps the Image control to enable file-system based caching</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/floydpink/CachedImage/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/floydpink/CachedImage/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <ul>
+          <li><a href="https://github.com/floydpink/CachedImage/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/floydpink/CachedImage/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/floydpink/CachedImage">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <p><img src="http://floydpink.github.io/CachedImage/images/logo.png" alt="logo" width="300px"></p>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="cachedimage--" class="anchor" href="#cachedimage--"><span class="octicon octicon-link"></span></a><a href="http://floydpink.github.io/CachedImage/">CachedImage</a> <a href="http://badge.fury.io/nu/CachedImage"><img src="https://badge.fury.io/nu/CachedImage.png" alt="NuGet version"></a> <a href="https://ci.appveyor.com/project/floydpink/cachedimage"><img src="https://ci.appveyor.com/api/projects/status/6tb8p301yio5fmh4" alt="Build status"></a>
+<h1>
+<a name="cachedimage--" class="anchor" href="#cachedimage--"><span class="octicon octicon-link"></span></a>CachedImage <a href="http://badge.fury.io/nu/CachedImage"><img src="https://badge.fury.io/nu/CachedImage.png" alt="NuGet version"></a> <a href="https://ci.appveyor.com/project/floydpink/cachedimage"><img src="https://ci.appveyor.com/api/projects/status/6tb8p301yio5fmh4" alt="Build status"></a>
 </h1>
 
-<p><a href="http://floydpink.github.io/CachedImage/"><img src="http://floydpink.github.io/CachedImage/images/logo.png" alt="logo" width="300px"></a></p>
-
-<p>A WPF control that wraps the Image control to enable file-system based caching.</p>
+<h5>
+<a name="a-wpf-control-that-wraps-the-image-control-to-enable-file-system-based-caching" class="anchor" href="#a-wpf-control-that-wraps-the-image-control-to-enable-file-system-based-caching"><span class="octicon octicon-link"></span></a>A WPF control that wraps the Image control to enable file-system based caching.</h5>
 
 <h3>
 <a name="background" class="anchor" href="#background"><span class="octicon octicon-link"></span></a>Background</h3>
@@ -92,25 +90,27 @@
 </ol><h3>
 <a name="thanks" class="anchor" href="#thanks"><span class="octicon octicon-link"></span></a>Thanks</h3>
 
-<p>All of the code in this library is from the answers on a Stack Overflow question titled - <a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application">How do I cache images on the client for a WPF application?</a>. </p>
+<p>All of the code in this library is from the answers on a Stack Overflow question:</p>
 
-<p>Thanks to <a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application/5175424#5175424">the wonderful code there</a> by <a href="http://stackoverflow.com/users/641271/jeroen-van-langen">Jeroen van Langen</a> and <a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application/12638859#12638859">the modification to make it bindable</a> by <a href="http://stackoverflow.com/users/367287/ivan-leonenko">Ivan Leonenko</a>.</p>
+<p><a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application">How do I cache images on the client for a WPF application?</a>. </p>
 
-<h3>
+<p>Thanks to:</p>
+
+<ol>
+<li><p><a href="http://stackoverflow.com/users/459159/simon-hartcher">Simon Hartcher</a>, who answered his own question <a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application/1893173#1893173">with the solution</a></p></li>
+<li><p><a href="http://stackoverflow.com/users/641271/jeroen-van-langen">Jeroen van Langen</a> for <a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application/5175424#5175424">the wonderful refacoring</a> of Simon's solution</p></li>
+<li><p><a href="http://stackoverflow.com/users/367287/ivan-leonenko">Ivan Leonenko</a> for <a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application/12638859#12638859">the tweaks to make the control bindable</a>.</p></li>
+</ol><h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 
 <p><a href="https://raw.github.com/floydpink/CachedImage/master/LICENSE">MIT License</a></p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Cached Image maintained by <a href="https://github.com/floydpink">floydpink</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/floydpink">floydpink</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -121,7 +121,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
