added a little shadow and rounded corner

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
       </header>
       <section>
-        <p><img src="http://floydpink.github.io/CachedImage/images/logo.png" alt="logo" width="300px"></p>
+        <p><img src="http://floydpink.github.io/CachedImage/images/logo.png" alt="logo" width="300px" style="box-shadow: 2px 2px 20px #ccc;border-radius: 15px;"></p>
 
 <h1>
 <a name="cachedimage--" class="anchor" href="#cachedimage--"><span class="octicon octicon-link"></span></a>CachedImage <a href="http://badge.fury.io/nu/CachedImage"><img src="https://badge.fury.io/nu/CachedImage.png" alt="NuGet version"></a> <a href="https://ci.appveyor.com/project/floydpink/cachedimage"><img src="https://ci.appveyor.com/api/projects/status/6tb8p301yio5fmh4" alt="Build status"></a>
