added the meta tag for Google Webmaster Tools [ci skip]

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <meta name="google-site-verification" content="-m4jR59tpUeTHifU8C6nXBSKCigdFZmiZ3GgtT0Kaz0" />
   </head>
   <body>
     <div class="wrapper">
