Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
 <li><p><a href="http://stackoverflow.com/users/459159/simon-hartcher">Simon Hartcher</a>, who answered his own question <a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application/1893173#1893173">with the solution</a></p></li>
 <li><p><a href="http://stackoverflow.com/users/641271/jeroen-van-langen">Jeroen van Langen</a> for <a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application/5175424#5175424">the wonderful refacoring</a> of Simon's solution</p></li>
 <li><p><a href="http://stackoverflow.com/users/367287/ivan-leonenko">Ivan Leonenko</a> for <a href="http://stackoverflow.com/questions/1878060/how-do-i-cache-images-on-the-client-for-a-wpf-application/12638859#12638859">the tweaks to make the control bindable</a>.</p></li>
+<li><p><a href="https://github.com/aybe">Aybe</a> for the fix for non-ascii characters in the path (<a href="https://github.com/floydpink/CachedImage/pull/1">#1</a>)</p></li>
+<li><p><a href="https://github.com/stackia">Saiqi Jia</a> for the enhancement of adding another IE based caching (<a href="https://github.com/floydpink/CachedImage/pull/5">#5</a>)</p></li>
 </ol>
 
 <h3>
